--- a/Memento/pom.xml
+++ b/Memento/pom.xml
@@ -2,14 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>Command</artifactId>
+        <groupId>com.fzz</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../Command/pom.xml</relativePath>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fzz</groupId>
-    <artifactId>Command</artifactId>
+    <artifactId>Memento</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>../Memento</module>
+        <module>../Observer</module>
     </modules>
 
 
