--- a/Builder/pom.xml
+++ b/Builder/pom.xml
@@ -3,18 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Memento</artifactId>
+        <artifactId>Observer</artifactId>
         <groupId>com.fzz</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Memento/pom.xml</relativePath>
+        <relativePath>../Observer/pom.xml</relativePath>
     </parent>
-
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Observer</artifactId>
+    <artifactId>Builder</artifactId>
     <packaging>pom</packaging>
-
     <build>
         <plugins>
             <plugin>
@@ -28,7 +25,7 @@
         </plugins>
     </build>
     <modules>
-        <module>../Builder</module>
+        <module>../ChainofResponsibility</module>
     </modules>
 
 
